# arduino-mcp-server

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
sketches/command_feedback/: command_feedback.ino
sketches/status_reporter/: status_reporter.ino
src/arduino_mcp_server/: server.py
src/mcp_server/: __init__.py
tests/integration/: test_mcp_server_integration.py
tests/unit/: test_mcp_server_unit.py
