[tool.poetry]
name = "arduino-mcp-server"
version = "1.0.0"
description = "A robust, secure, and extensible MCP server for Arduino using JSON-RPC 2.0."
authors = ["Your Name <your@email.com>"]
package-mode = false
packages = [
    { include = "mcp_server", from = "src" },
    { include = "arduino_mcp_server", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyserial = "^3.5"
mcp = {extras = ["cli"], version = "^1.12.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-mock = "^3.14"

[tool.poetry.scripts]
arduino-mcp-server = "arduino_mcp_server.server:ArduinoServer.run_cli"

[tool.poetry.plugins."mcp.servers"]
arduino = "arduino_mcp_server.server:ArduinoServer"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 