[tool.poetry]
name = "arduino-mcp-server"
version = "1.0.0"
description = "A robust, secure, and extensible MCP server for Arduino using JSON-RPC 2.0."
authors = ["Your Name <your@email.com>"]
package-mode = false
packages = [
    { include = "arduino_mcp_server", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyserial = "^3.5"
mcp = {extras = ["cli"], version = "^1.12.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-mock = "^3.14"
pytest-asyncio = "^0.24"

[tool.poetry.scripts]
arduino-mcp-server = "arduino_mcp_server.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short"
]
markers = [
    "unit: Unit tests (no hardware required)",
    "integration: Integration tests (hardware required)",
    "slow: Slow running tests",
    "asyncio: Async tests"
]

[tool.poetry.plugins."mcp.servers"]
arduino = "arduino_mcp_server.server:mcp"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 